--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
       <ul>
         <li><a href="#">ホーム</a></li>
         <li><a href="#">コンテンツ１</a></li>
-        <li><a href="#>コンテンツ２</a></li>
-        <li><a href="#>ヘルプ</a></li>
+        <li><a href="#">コンテンツ２</a></li>
+        <li><a href="#">ヘルプ</a></li>
         <li><a href="#">お問い合わせ</a></li>
        </ul>
      </nav>
