--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <section id="logo">
       <ul>
-         <li><img src="img/gear_01.png" alt="logo image"></li>
+         <li><img src="gear_01.png" alt="logo image"></li>
          <li>ロゴ</li>
         </ul>
         </section>
