--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <body>
     <section id="logo">
       <ul>
-         <li><img src="img/gear_01.PNG" alt="logo image"></li>
+         <li><img src="img/gear_01.png" alt="logo image"></li>
          <li>ロゴ</li>
         </ul>
         </section>
     <nav id="gnav">
       <ul>
-        <li><a href="#" class="selected">ホーム</a></li>
-        <li><a href="#">コンテンツ１</a></li>
-        <li><a href="#">コンテンツ２</a></li>
-        <li><a href="#">ヘルプ</a></li>
-        <li><a href="#">お問い合わせ</a></li>
+        <li><a href="#"><div class="img" id="home"></div><div class="text">ホーム</div></a></li>
+        <li><a href="#"><div class="img" id="content1"></div><div class="text">コンテンツ１</div></a></li>
+        <li><a href="#"><div class="img" id="content2"></div><div class="text">コンテンツ２</div></a></li>
+        <li><a href="#"><div class="img" id="help"></div><div class="text">ヘルプ</div></a></li>
+        <li><a href="#"><div class="img" id="help"></div><div class="text">お問い合わせ</div></a></li>
        </ul>
      </nav>
     <h1>テスト</h1>
